@@ -1,5 +1,8 @@
 2011-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/ConfigTree.pm (getRelative): now leaves can be
+	referred to as [[nodeid]] in RPN.
+
 	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm (discover):
 	new discovery parameter: RFC2670_DOCS_IF::suppress-all-cable-stats
 
